2001-05-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/druid-qif-import.c: fix scrollbar bug. raise qif
	window to top

2001-05-21  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-main.c: remove cruft

	* src/gnome/new-user-callbacks.c: use gncp_new_user_finish

	* src/gnome/new-user-funs.c: finish new user choices dialog.
	(gncp_new_user_finish): new func

	* src/scm/main.scm: use new 'new user' call

	* src/guile/gnc.gwp: change new user api

	* src/guile/gnucash.h: change new user api

	* doc/sgml/C/xacc-balancesheet.sgml: fix warning

2001-05-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/new-user-funs.h: add api & glade work for new
	user choices dialog.

2001-05-21  Robert Graham Merkel  <rgmerk@mira.net>

	* doc/sgml/C/xacc-whats-new.sgml: New file.
	
	* doc/sgml/C/xacc-multicolumn-view-reports.sgml: preliminary
	description.

	* doc/sgml/C/xacc-report.sgml, xacc-balancesheet.sgml, 
	xacc-asset-liability-piecharts.sgml : more updates.

	* src/scm/tip-list.scm: more tips.

2001-05-19  Dave Peticolas  <dave@krondo.com>

	* src/engine/sixtp.c (gnc_is_our_xml_file): fix mem leak

	* src/engine/io-gncxml-v2.c (gnc_book_load_from_xml_file_v2): fix
	mem leak

	* src/gnome/window-acct-tree.c: fix mem leak

	* src/doc/design/engine.texinfo: update docs

	* src/gnome/window-acct-tree.c: fix mem leaks

	* src/engine/io-gncxml-v2.c (gnc_counter_end_handler): fix mem
	leak

	* src/engine/gnc-account-xml-v2.c (account_parent_handler): fix
	mem leak

	* src/engine/Group.c (xaccFreeAccountGroup): set parent's child
	pointer to NULL
	(xaccAccountRemoveGroup): set parent's child pointer to NULL

	* src/engine/sixtp-dom-parsers.c (dom_tree_to_integer): fix mem
	leak

2001-05-18  James LewisMoss  <jimdres@mindspring.com>

	* src/FileDialog.c (gncFileNew): create new user dialog on new
	file new.

2001-05-18  Dave Peticolas  <dave@krondo.com>

	* src/engine/io-gncxml-w.c: remove

	* src/engine/Group.h: fix prototype

	* src/doc/design/engine.texinfo: update docs