@@ -1,3 +1,7 @@
+2001-05-22  Christian Stimming  <stimming@tuhh.de>
+
+	* src/register/splitreg.c (configAction): fix comments for i18n.
+
 2001-05-22  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/druid-qif-import.c: fix scrollbar bug. raise qif
